Add script and pictures for lab3

--- a/reports/report1.tex
+++ b/reports/report1.tex
@@ -52,7 +52,7 @@
   \label{fig:roots}
 \end{figure}
 
-\section{}
+\section{Исходный код}
 
 \lstinputlisting[language=Python, numbers=left]{../scripts/lab1.py}
 
