Update lab3 report

--- a/reports/report3.tex
+++ b/reports/report3.tex
@@ -29,11 +29,11 @@
 
 Рассмотрим работу метода на примере интегрирования уравнений \(\dot x(t) = \pm x, x(0)=1\).
 В случае положительной правой части решением уравенения является функция \(x(t)=e^x\).
-Метод Эйлера при решении этого уравнения строит последоввательность, которая растёт
+Метод Эйлера при решении этого уравнения строит последовательность, которая растёт
 как геометрическая прогрессия со знаменателем \(h+1\), в то время, как
 последовательность значений функции-решения в узлах сетки является
 геометрической прогрессией со знаменателем \(e^h\). \(e^h - 1 - h = h^2/2 + O(h^3)>0\)
-прим малом \(h\), поэтому разность между численным и истинным решениями на сетке
+при малом \(h\), поэтому разность между численным и истинным решениями на сетке
 будет расти также как геометрическая прогрессия, т.е. экспоненциально. Этот эффект
 виден на рис. \ref{fig:euler_exp_plus}.
 В случае решения уравнения \(\dot x(t) = - x, x(0)=1\) верны те же самые рассуждения,
@@ -102,13 +102,21 @@
 постоянным шагом. Точное решение неизвестно, поэтому для оценки ошибки интегрирования
 использовалось численное решение, полученное тем же методом, но с вдвое меньшим шагом.
 На рис. \ref{fig:rossler_system} показана разность численных решений по норме \(L1\).
-Из графика виден четвёртый порядок сходимости метода, а также то, что ошибка интегрирования
-изменяется сначала хаотично, а потом становится похожей на периодическую функцию.
+Из графика виден четвёртый порядок сходимости метода, а также то, что оценка ошибки интегрирования
+сначала нарастает, а потом становится похожей на периодическую функцию.
+При шаге \(10^{-1}\) видно, что на большом промежутке времени оценка ошибки нарастает,
+однако в этом случае нет уверенности в том, что поведение оценки полностью совпадает с
+поведением реальной ошибки, т.к. шаг дополнительной сетки достаточно большой.
+При меньших значениях шага интегрирования оценка ошибки имеет более сложное поведение,
+которое меняется с изменением величины шага. Тем не менее, схема с двойной сеткой позволяет
+оценить порядок ошибки в случае использования шага, равного \(10^{-2}\) или \(10^{-3}\).
+Этот порядок является вполне приемлемым для интегрирования системы.
+
 
 \begin{figure}[H]
 	\center
 	\includegraphics[width=0.75\textwidth]{../pictures/lab3_rossler_system.png}
-	\caption{Ошибка интегрирования системы Рёсслера при различных значениях шага}
+	\caption{Оценка ошибки интегрирования системы Рёсслера при различных значениях шага}
 	\label{fig:rossler_system}
 \end{figure}
 
