--- a/reports/report3.tex
+++ b/reports/report3.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper]{article}
-\usepackage{fontspec}
+\usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
 \usepackage{listings}
 \usepackage[a4paper]{geometry}
@@ -7,9 +7,6 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{float}
-
-\setmainfont{CMU Serif}
-\setsansfont{CMU Sans Serif}
 
 \begin{document}
 
