Finish lab4 report

--- a/reports/report4.tex
+++ b/reports/report4.tex
@@ -30,7 +30,7 @@
 распределены по закону \(\rho(\lambda / \sqrt{N})=c \sqrt{4-\lambda^2/N}\), где
 \(c\) --- нормировочная константа.
 
-Для построения гистограммы распределения нормированных собственных чисел были
+Для построения гистограммы распределения нормированных на \(\sqrt{N}\) собственных чисел были
 сгенерированы 100 реализаций случайной матрицы при \(N=1000\). На рис. \ref{fig:goe_eig}
 показана нормированная гистограмма и теоретическое распределение (пунктирный график), константа
 в котором найдена из условия совпадения максимального значения функции распределения
@@ -43,13 +43,13 @@
 полученную, как и для матриц \(A\), по сотне реализаций при \(N=1000\). Из рис.
 \ref{fig:gue_eig} также можно видеть, что гистограмма достаточно точно совпадает с
 теоретическим распределением.
-\begin{figure}[H]
+\begin{figure}
 	\center
 	\includegraphics[width=0.75\textwidth]{../pictures/lab4_goe_eig_hist.pdf}
 	\caption{Распределение нормированных собственных чисел для GOE}
 	\label{fig:goe_eig}
 \end{figure}
-\begin{figure}[H]
+\begin{figure}
 	\center
 	\includegraphics[width=0.75\textwidth]{../pictures/lab4_gue_eig_hist.pdf}
 	\caption{Распределение нормированных собственных чисел для GUE}
@@ -57,12 +57,36 @@
 \end{figure}
 
 \section{Построение гистограммы расщепления уровней энергии случайных матриц}
+Пусть имеется упорядоченный набор собственных чисел матрицы GOE или GUE:
+\begin{displaymath}
+\lambda_1 \leqslant \lambda_2 \leqslant \dots \leqslant \lambda_{N-1} \leqslant \lambda_N
+\end{displaymath}
+Расщепение уровней энергии определяется следующим образом:
+\(s_i = \lambda_{i+1}-\lambda_i, i=\overline{1,N-1}\). Для того, чтобы распределение
+расщеплений не зависело от размера матрицы, как и для собственных чисел, вводится
+нормировка: \(\bar{s_i}=s_i/<s>\), где \(<s>\) --- средняя величина расщепления.
 
+Теоретическое распределений расщеплений для матриц GOE имеет вид:
+\(p_{GOE}(\bar{s}) = c_1 \bar{s} \exp(-\frac{\pi}{4}\bar{s}^2)\). На рис. \ref{fig:goe_spacing}
+изображена нормированная гистограмма, построенная построенная по полученным в предудущем пункте
+реализациям. Для сравнения на том же графике также построена функция \(p_{GOE}(\bar{s})\)
+с таким значением \(c_1\), что её максимальное значение совпадает с максимумом гистограммы.
+Из графика видно, что гистограмма затухает с увеличением \(\bar{s}\) не так быстро,
+как \(p_{GOE}(\bar{s})\), но тем не менее общий качественный вид зависимости совпадает.
+В окрестности нуля значения гистограммы растут линейно.
+
+Для матриц GUE распределений расщеплений имеет вид:
+\(p_{GUE}(\bar{s}) = c_2 \bar{s}^2 \exp(-\frac{4}{\pi}\bar{s}^2)\). На рис. \ref{fig:gue_spacing}
+показана нормированная гистограмма расщеплений и график функии \(p_{GUE}(\bar{s})\) c
+вычисленной ранее описанным способом константой \(c_2\). Как и для матриц GOE,
+гистограмма затухает медленнее, чем теоретическое распределение, но качественно
+похожа на график реального распределения. В частности, виден квадратичный порядок
+роста значений гистограммы в окрестности нуля.
 
 \begin{figure}[H]
 	\center
 	\includegraphics[width=0.75\textwidth]{../pictures/lab4_goe_spacing_hist.pdf}
-	\caption{Распределение нормированных расщеплени уровней для GOE}
+	\caption{Распределение нормированных расщеплений уровней для GOE}
 	\label{fig:goe_spacing}
 \end{figure}
 
