Fixes in report 4

--- a/reports/report4.tex
+++ b/reports/report4.tex
@@ -17,7 +17,7 @@
 \maketitle
 
 \section{Построение гистограммы распределения собственных чисел случайных матриц}
-Рассмотрим симметричные матрицы \(A\in \mathbf{R}^{N\times N}\) такие, что \(A=A^T\) и
+Рассмотрим матрицы \(A\in \mathbf{R}^{N\times N}\) такие, что \(A=A^T\) и
 \begin{displaymath}
 	a_{i,j} = \left\{
   \begin{array}{lr}
@@ -36,7 +36,7 @@
 в котором найдена из условия совпадения максимального значения функции распределения
 с максимальным значением гистограммы.
 
-Пусть теперь \(B\in \mathbf{C}^{N\times N}\) такие, что \(B=B^\dag\) и
+Пусть теперь матрицы \(B\in \mathbf{C}^{N\times N}\) такие, что \(B=B^\dag\) и
 \(b_{i,j} = \mathcal{N}(0,1) + i\mathcal{N}(0,1)\) (Gaussian Unitary Ensemble).
 Их собственные числа действительные и распределены по тому же закону, что и собственные числа матриц \(A\).
 На рис. \ref{fig:gue_eig} можно увидеть гистограмму нормированных собственных чисел,
@@ -68,7 +68,7 @@
 
 Теоретическое распределений расщеплений для матриц GOE имеет вид:
 \(p_{GOE}(\bar{s}) = c_1 \bar{s} \exp(-\frac{\pi}{4}\bar{s}^2)\). На рис. \ref{fig:goe_spacing}
-изображена нормированная гистограмма, построенная построенная по полученным в предудущем пункте
+изображена нормированная гистограмма, построенная по полученным в предудущем пункте
 реализациям. Для сравнения на том же графике также построена функция \(p_{GOE}(\bar{s})\)
 с таким значением \(c_1\), что её максимальное значение совпадает с максимумом гистограммы.
 Из графика видно, что гистограмма затухает с увеличением \(\bar{s}\) не так быстро,
