Update script and report for lab5

--- a/reports/report5.tex
+++ b/reports/report5.tex
@@ -66,7 +66,54 @@
 	\label{fig:eigvecs_error}
 \end{figure}
 
+\section{Количественные характеристики решений уравнения Шрёдингера c
+периодическим по времени гамильтонианом}
+
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_spacings_histF=0.01}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_spacings_histF=0.1}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_spacings_histF=1}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_histF=0.01}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_histF=0.1}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+
+\begin{figure}[H]
+	\center
+	\includegraphics[width=0.75\textwidth]{../pictures/{lab5_eigens_histF=1}.pdf}
+	\caption{Оценка ошибки нахождения собственныx векторов матрицы-пропагатора}
+	\label{fig:eigvecs_error}
+\end{figure}
+
+
 \section{Исходный код}
 \lstinputlisting[language=Python, numbers=left]{../scripts/lab5.py}
+
+
 
 \end{document}
