Fix typos in report5

--- a/reports/report5.tex
+++ b/reports/report5.tex
@@ -79,7 +79,7 @@
 при значениях \(F\in\{0.01,0.1,1\}\) были сгенерировынны 120 реализаций пар матриц
 \((H_0, H_1)\) из (\ref{eq:schrodinger_eq}) размерности 100.
 Перед построением нормированных гистограмм, как и в случае стационарной системы,
-квазиэнергии были умножены на коэффициент на \(\frac{1}{\sqrt{N}}\), чтобы их спектр
+квазиэнергии были умножены на коэффициент \(\frac{1}{\sqrt{N}}\), чтобы их спектр
 не зависел от размерности системы.
 
 На рис. \ref{fig:floquet_energies_f_0_01}, \ref{fig:floquet_energies_f_0_1}, \ref{fig:floquet_energies_f_1}
@@ -113,8 +113,8 @@
 рассматривается и их расщепление, определяемое по формуле:
 \(s_\alpha = E(0)_{\alpha+1}-E(0)_\alpha, i=\overline{1,N-1}\). По полученным
 ранее реализациям были построены гистограммы нормированных расщеплений:
-\(\bar s_\alpha =s_\alpha/\langle s \rangle>\), где \(\langle s\rangle\) --- средняя
-величина расщепления. Из рис. \ref{fig:floquet_energies_spacing_f_0_01},
+\(\bar s_\alpha =\frac{s_\alpha}{\langle s_\alpha \rangle}\), где \(\langle s_\alpha\rangle\) --- средняя
+величина расщепления по всем реализациям. Из рис. \ref{fig:floquet_energies_spacing_f_0_01},
 \ref{fig:floquet_energies_spacing_f_0_1}, \ref{fig:floquet_energies_spacing_f_1}
 видно, что для гамильтониана, близкого к стационарному, распределения имеет удалённый
 от нуля пик, но при увеличении \(F\) этот пик смещается влево, что говорит о
