--- a/reports/report6.tex
+++ b/reports/report6.tex
@@ -66,7 +66,7 @@
 \begin{figure}[H]
 	\center
 	\includegraphics[width=0.75\textwidth]{../pictures/lab6_lyapunov_characteristic.pdf}
-	\caption{Зависимость показателя Ляпунова от параметра отображения}
+	\caption{Зависимость среднего показателя Ляпунова от параметра отображения}
 	\label{fig:lyapunov_characteristic}
 \end{figure}
 
