fix typos in report6

--- a/reports/report6.tex
+++ b/reports/report6.tex
@@ -17,7 +17,7 @@
 \date{}
 \maketitle
 
-\section{Построение бифуркационной диаграммы логистичекого отображения}
+\section{Построение бифуркационной диаграммы логистического отображения}
 
 Отображение \(x_{n+1}=(r-x_n)x_n\) называется логистическим. Известно, что при \(r\in [0;3)\)
 оно имеет единственную устойчивую неподвижную точку, а при \(r\in [3;r_\infty),r_\infty<4\)
@@ -41,7 +41,7 @@
 хаос (циклы конечного периода отсутствуют), но существует некоторых аттрактор.
 При \(r>4\) аттрактор исчезает и продолжать диаграмму нет смысла.
 
-\section{Исследование устойчивости логистичекого отображения на аттракторе}
+\section{Исследование устойчивости логистического отображения на аттракторе}
 
 Устойчивость какой-либо траектории отображения характеризуется Ляпуновским показателем
 \begin{displaymath}
